# tauri-deno-vue-rsbuild-template

./: LICENSE  README.md  index.html  justfile  package.json  rsbuild.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
