[package]
name = "tauri-deno-vue-rsbuild-template"
version = "0.1.0"
authors = ["you"]
edition = "2021"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_deno_vue_rsbuild_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# https://github.com/ebarnard/rust-plist/issues/151#issuecomment-2746645171 修复后可以删除
deranged = "=0.4.0"
